--- a/readme
+++ b/readme
@@ -1,2 +1,5 @@
+じゃんけん対戦戦略シミレーションゲーム　ゲーム内容は、縦型のステージで、そのなかに相手と自分のキャラが５
+体ずついます。そのキャラたちを戦えさせるゲームです。ゲームのル―ルはチェスと同じような感じで、そのキャラによって能力が
+違います、例えば、キャラの能力がマスを３マス動ける能力があったり攻撃力が高かったり
 
-3
+
