--- a/readme
+++ b/readme
@@ -1,5 +1,12 @@
-じゃんけん対戦戦略シミレーションゲーム　ゲーム内容は、縦型のステージで、そのなかに相手と自分のキャラが５
-体ずついます。そのキャラたちを戦えさせるゲームです。ゲームのル―ルはチェスと同じような感じで、そのキャラによって能力が
-違います、例えば、キャラの能力がマスを３マス動ける能力があったり攻撃力が高かったり
+まずゲームを起動すると、画面に縦25マス横９マスのステージが出てくる
+、そして次にキャラクターを選択する画面がでてきて、キャラクターを選ぶと、オンラインで対戦相手を探してくれる、
+対戦相手が見つかるとゲームが開始して、キャラクターがステージに配置される。
+これはターン制のゲームだから毎回先行、後攻を決めるためにじゃんけんをする＊（
+じゃんけんに勝つと先行か後攻決めらる
+先行か後攻かを決めたら、キャラクターに指示できるようになる。
 
+次にゲームルールについて
+このゲームのルールはキャラクターに指示して相手のキャラクターをすべて倒すこと
+でもキャラクターを指示できるのは最大５回まで
+自分のキャラクターの指示が終わると相手のキャラクター指示が始まる
 
