--- a/readme
+++ b/readme
@@ -9,4 +9,6 @@
 このゲームのルールはキャラクターに指示して相手のキャラクターをすべて倒すこと
 でもキャラクターを指示できるのは最大５回まで
 自分のキャラクターの指示が終わると相手のキャラクター指示が始まる
+キャラクターにもいろいろ種類があって能力がそれぞれある
+たとえば、そのキャラクターを選択すると、攻撃力が２倍に、なったり
 
